crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_3_token_afterglow_dark_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                                                                                      Afterglow Dark













                                         ╭ 1 · Connect your sources ──────────────────────────────────────────────────╮
                                         │ space picks a row · ⏎ continues · a row with no credentials asks for a     │
                                         │ token                                                                      │
                                         │                                                                            │
                                         │   [x] ✓ GH github.com  signed in as smorris via gh · 2 orgs                │
                                         │ › [x] ○ GL gitlab.work.ca  found in your git config, no credentials yet…   │
                                         │       Token  ••••••••••••▏                                                 │
                                         │       Needs api, read_user · ⏎ test and save to your keyring · esc cancel  │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  tab buttons  esc skip for now
