crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_3_token_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                                                                                          Liminal HQ













                                         ╭ 1 · Connect your sources ──────────────────────────────────────────────────╮
                                         │ space picks a row · ⏎ continues · a row with no credentials asks for a     │
                                         │ token                                                                      │
                                         │                                                                            │
                                         │   [x] ✓ GH github.com  signed in as smorris via gh · 2 orgs                │
                                         │ › [x] ○ GL gitlab.work.ca  found in your git config, no credentials yet…   │
                                         │       Token  ••••••••••••▏                                                 │
                                         │       Needs api, read_user · ⏎ test and save to your keyring · esc cancel  │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:148 D " Liminal HQ"
14:41 B "╭ 1 · Connect your sources ──────────────────────────────────────────────────╮"
15:41 B "│"
15:43 D "space picks a row · ⏎ continues · a row with no credentials asks for a"
15:118 B "│"
16:41 B "│"
16:43 D "token"
16:118 B "│"
17:41 B "│"
17:118 B "│"
18:41 B "│"
18:43 B ""
18:51 D "GH"
18:54 B "github.com"
18:64 D "  signed in as smorris via gh · 2 orgs"
18:118 B "│"
19:41 B "│"
19:43 BR "›"
19:45 R "[x]"
19:49 DR "○ GL"
19:54 BR "gitlab.work.ca"
19:68 DR "  found in your git config, no credentials yet…"
19:118 B "│"
20:41 B "│"
20:43 D "      Token"
20:56 B "••••••••••••▏"
20:118 B "│"
21:41 B "│"
21:43 D "      Needs api, read_user · ⏎ test and save to your keyring · esc cancel"
21:118 B "│"
22:41 B "│"
22:118 B "│"
23:41 B "│"
23:43 D "[ Back ]"
23:53 B "[ Continue ⏎ ]"
23:69 D "[ Skip for now · esc ]"
23:118 B "│"
24:41 B "╰────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " continue"
39:13 B "space"
39:18 D " pick"
39:25 B "esc"
39:28 D " skip for now"
