crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_4_scope_back_focused_liminal_hq_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  first run                                                                                                                          Liminal HQ














                                         ╭ 2 · What to include ───────────────────────────────────────────────────────╮
                                         │ Pick what each account covers. Leave everything unticked to include        │
                                         │ everything you can see.                                                    │
                                         │                                                                            │
                                         │ › [x] github.com · my own repositories                                     │
                                         │   [ ] github.com · org liminal-hq                                          │
                                         │   [ ] github.com · org acme                                                │
                                         │                                                                            │
                                         │ [› Back ‹]  [ Continue ⏎ ]  [ Skip for now · esc ]                         │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  ← → buttons  ⌫ back  space pick  esc skip for now
